--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,1 +1,7 @@
-<h1>test</h1>
+<% @messages.each do |m| %>
+
+    <h2><%= m.title %></h2>
+    <%= link_to "View Message", message_path(m), class: "btn btn default" %>
+<% end %>
+
+<%= link_to "New Message", new_message_path %>
