--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,31 @@
   </head>
 
   <body>
+
+  <div class="navbar navbar-default">
+  <div class="container">
+    <div class="navbar-header">
+
+      <%= link_to "Message Application", root_path, class: "navbar-brand" %>
+    </div>
+    <ul class="nav navbar-nav">
+
+      <li><%= link_to "Sign up", new_user_registration_path %> </li>
+      <% if user_signed_in? %>
+      <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %>/li>
+      <% else %>
+          <li><%= link_to "Log in", new_user_session_path %></li>
+      <% end %>
+    </ul>
+    <% if user_signed_in? %>
+        <p> <%= link_to "New message", new_message_path, class: "navbar-right navbar-text navbar-link" %>
+    <% end %>
+
+  </div>
+  </div>
+
+  <p class="notice"><%= notice %> </p>
+  <p class="alert"><%= alert %> </p>
     <%= yield %>
   </body>
 </html>
