--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,4 +1,5 @@
 <h2> <%=  @message.title %></h2>
+<p>Posted by <%= @message.user.email %> <%= time_ago_in_words(@message.created_at)  %> ago</p>
 <p><%= @message.description %></p>
 <%= link_to "Edit", edit_message_path(@message) %>
 <%= link_to "Delete", message_path(@message), method: :delete, data: { confirm: "Are you sure?" } %>
