--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,9 @@
     </div>
     <ul class="nav navbar-nav">
 
+      <% if !user_signed_in? %>
       <li><%= link_to "Sign up", new_user_registration_path %> </li>
+  <% end %>
       <% if user_signed_in? %>
       <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
       <% else %>
