--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,9 +33,10 @@
 
   </div>
   </div>
-
+<div class="container">
   <p class="notice"><%= notice %> </p>
   <p class="alert"><%= alert %> </p>
     <%= yield %>
+</div>
   </body>
 </html>
