--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,6 +1,8 @@
 <% @messages.each do |m| %>
 
+    <div class="col-md-4 rounded" style="background: gainsboro;margin-left:10px;">
     <h2><%= m.title %></h2>
     <%= link_to "View Message", message_path(m), class: "btn btn default" %>
+    </div>
 <% end %>
 
