--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,8 +1,10 @@
+<div class="row">
 <% @messages.each do |m| %>
 
-    <div class="col-md-4 col-md-offset-1 rounded" style="background: gainsboro;">
+    <div class="col-md-4 rounded" style="background: gainsboro;">
     <h2><%= m.title %></h2>
     <%= link_to "View Message", message_path(m), class: "btn btn default" %>
     </div>
 <% end %>
 
+</div>
