--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,8 +2,12 @@
 <% @messages.each do |m| %>
 
     <div class="col-md-4 rounded" style="background: gainsboro;">
+      <div class="col-md-12">
+
     <h2><%= m.title %></h2>
     <%= link_to "View Message", message_path(m), class: "btn btn default" %>
+
+      </div>
     </div>
 <% end %>
 
