--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
 <% @messages.each do |m| %>
 
-    <div class="col-md-4 rounded" style="background: gainsboro;">
+    <div class="col-md-3 rounded" style="background: gainsboro;margin-left:2px">
       <div class="col-md-12">
 
     <h2><%= m.title %></h2>
