--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
 <% @messages.each do |m| %>
 
-    <div class="col-md-3 rounded" style="background: gainsboro;margin-left:2px">
-      <div class="col-md-12">
+    <div class="col-md-3 rounded" style="background: gainsboro;">
+      <div class="col-md-12" style="margin-left:2px">
 
     <h2><%= m.title %></h2>
     <%= link_to "View Message", message_path(m), class: "btn btn default" %>
