--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -5,7 +5,7 @@
       <div class="col-md-12" style="margin-left:2px">
 
     <h2><%= m.title %></h2>
-    <%= link_to "View Message", message_path(m), class: "btn btn default" %>
+    <%= link_to "View Message", message_path(m), class: "btn btn-default" %>
 
       </div>
     </div>
