--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,10 +2,10 @@
 <% @messages.each do |m| %>
 
     <div class="col-md-3 rounded" style="background: gainsboro;">
-      <div class="col-md-12" style="margin-left:2px">
+      <div class="col-md-12" style="padding-left:2px">
 
     <h2><%= m.title %></h2>
-    <%= link_to "View Message", message_path(m), class: "btn btn-default btn-sm", style: "margin-bottom:5px;"%>
+    <%= link_to "View Message", message_path(m), class: "btn btn-default btn-sm pull-right", style: "margin-bottom:5px;"%>
 
       </div>
     </div>
