--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
 <% @messages.each do |m| %>
 
-    <div class="col-md-3 rounded" style="background: gainsboro;">
-      <div class="col-md-12" style="padding-left:2px">
+    <div class="col-md-3 rounded" style="background: gainsboro;margin-left:3px;margin-top:3px;border: 5px solid beige;">
+      <div class="col-md-12" style="">
 
     <h2><%= m.title %></h2>
     <%= link_to "View Message", message_path(m), class: "btn btn-default btn-sm pull-right", style: "margin-bottom:5px;"%>
