--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
 <% @messages.each do |m| %>
 
-    <div class="col-md-3 rounded" style="background: gainsboro;margin-left:3px;margin-top:3px;border: 5px solid beige;">
+    <div class="col-lg-3 rounded" style="background: gainsboro;margin-left:3px;margin-top:3px;border: 5px solid beige;">
       <div class="col-md-12" style="">
 
     <h2><%= m.title %></h2>
