--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="flex">
 <% @messages.each do |m| %>
 
     <div class="col-lg-3 rounded" style="background: gainsboro;margin-left:3px;margin-top:3px;border: 5px solid beige;">
@@ -12,3 +12,8 @@
 <% end %>
 
 </div>
+<script type="text/javascript">
+    $(function() {
+        $(".flex").flex();
+    });
+</script>
