--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,13 +1,13 @@
 
 <% @messages.each do |m| %>
 
-    <div class="col-md-4" style="background: gainsboro;border: 5px solid beige;">
-
+    <div class="col-md-4" style="background: gainsboro;border: 5px solid beige;min-height: ">
+<div class="col-sm-12">
 
     <h2><%= m.title %></h2>
     <%= link_to "View Message", message_path(m), class: "btn btn-default btn-sm pull-right", style: "margin-bottom:5px;"%>
 
-
+</div>
     </div>
 <% end %>
 
