--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,7 +1,7 @@
 
 <% @messages.each do |m| %>
 
-    <div class="col-md-4" style="background: gainsboro;border: 5px solid beige;min-height: ">
+    <div class="col-md-4 col-sm-4" style="background: gainsboro;border: 5px solid beige;min-height: ">
 <div class="col-sm-12">
 
     <h2><%= m.title %></h2>
