--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,4 @@
-
+<div class="row">
 <% @messages.each do |m| %>
 
     <div class="col-md-4 col-sm-4" style="background: gainsboro;border: 5px solid beige;min-height: ">
@@ -11,3 +11,4 @@
     </div>
 <% end %>
 
+</div>
