--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,4 @@
-
+<div class="row row-eq-height">
 <% @messages.each do |m| %>
 
     <div class="col-xs-12 col-md-4" style="background: gainsboro;border: 5px solid darkgray;">
@@ -10,7 +10,7 @@
 </div>
     </div>
 <% end %>
-
+</div>
 <div class="row">
 <%= will_paginate @messages %>
 </div>
