--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,4 @@
-<div class="row row-eq-height">
+<div class="row">
 <% @messages.each do |m| %>
 
     <div class="col-xs-12 col-md-4" style="background: gainsboro;">
