--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -5,7 +5,7 @@
 <div class="col-sm-12" style="word-wrap: break-word; ">
 
     <h2><%= m.title %></h2>
-    <%= link_to "View Message", message_path(m), class: "btn btn-default btn-sm pull-right", style: "margin-bottom:5px;"%>
+    <%= link_to "View Message", message_path(m), class: "btn btn-default btn-sm bottomright", style: "margin-bottom:5px;"%>
   <div class="clearfix"></div>
 </div>
     </div>
