--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -3,8 +3,9 @@
 
     <div class="col-md-4" style="background: gainsboro;">
 <div class="col-sm-12" style="word-wrap: break-word; ">
-
+<div class="col-sm-12">
     <h2><%= m.title %></h2>
+</div>
     <%= link_to "View Message", message_path(m), class: "btn btn-default btn-sm bottomright", style: "margin-bottom:5px;"%>
   <div class="clearfix"></div>
 </div>
