--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,7 +2,7 @@
 <% @messages.each do |m| %>
 
     <div class="col-md-4" style="background: gainsboro;">
-<div class="col-sm-12" style="word-wrap: break-word; ">
+<div class="col-sm-12" style="word-wrap: break-word; padding: 0 5px 0 5px;">
 <div class="col-sm-12">
     <h2><%= m.title %></h2>
 </div>
