--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,8 +1,8 @@
 <div class="row-flex row-flex-wrap">
 <% @messages.each do |m| %>
 
-    <div class="col-md-4" style="background: gainsboro;">
-<div class="col-sm-12" style="word-wrap: break-word; padding: 0 5px 0 5px;">
+    <div class="col-md-4" style="background: gainsboro;border:3px solid white">
+<div class="col-sm-12" style="word-wrap: break-word; ">
 <div class="col-sm-12">
     <h2><%= m.title %></h2>
 </div>
