--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,3 +51,5 @@
   flex: 2;
 }
 .bottomright {position:absolute; bottom:0;  margin-bottom:7px; margin:7px; right: 0;}
+*= require font-awesome
+*= require md_simple_editor
