--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,9 +1,9 @@
 <%= simple_form_for @message do |f| %>
     <%= md_simple_editor  do %>
-    <%= f.input :title, label:"Message Title" %>
+    <%= f.text_area, label:"Message Title" %>
     <% end %>
     <%= md_simple_editor  do %>
-    <%= f.input :description, label:"Description" %>
+    <%= f.text_area :description, label:"Description" %>
         <% end %>
     <%= f.button :submit %>
 <% end %>
