--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,11 +1,14 @@
+/*
+ *= require font-awesome
+ *= require md_simple_editor
+*/
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
 
 @import url("https://fonts.googleapis.com/css?family=Lato:400,700,400italic");/*!
  * bootswatch v3.3.7
- *= require font-awesome
- *= require md_simple_editor
  * Homepage: http://bootswatch.com
  * Copyright 2012-2016 Thomas Park
  * Licensed under MIT
