--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,6 +1,6 @@
 <h2> <%=  @message.title %></h2>
 <p>Posted by <%= @message.user.email %> <%= time_ago_in_words(@message.created_at)  %> ago</p>
-<p><%= @message.description %></p>
+<p><%= markdown(@message.description) %></p>
 <% if user_signed_in? %>
 <% if @message.user.id == current_user.id %>
     <%= link_to "Edit", edit_message_path(@message) %>
