--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,10 +1,11 @@
-<h2> <%=  @message.title %></h2>
+
+<div class="well"><h2> <%=  @message.title %></h2></div>
 <p>Posted by <%= @message.user.email %> <%= time_ago_in_words(@message.created_at)  %> ago</p>
 <p><%= markdown(@message.description) %></p>
 <% if user_signed_in? %>
 <% if @message.user.id == current_user.id %>
-    <%= link_to "Edit", edit_message_path(@message) %>
-<%= link_to "Delete", message_path(@message), method: :delete, data: { confirm: "Are you sure?" } %>
+    <%= link_to "Edit", edit_message_path(@message), class: "btn btn-default" %>
+<%= link_to "Delete", message_path(@message), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default" %>
     <% end %>
     <% end %>
-<%= link_to "Back", root_path %>
+<%= link_to "Back", root_path, class: "btn btn-default" %>
