--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -7,7 +7,7 @@
 
 
     <%= md_simple_editor  do %>
-        <%= f.text_area :description %>
+        <%= f.input :description, as: :text %>
     <% end %>
 
 
