--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,5 +1,5 @@
 
-<h2><span class="glyphicon glyphicon-message"></span> <%=  @message.title %></h2>
+<h2><span class="glyphicon glyphicon-envelope"></span> <%=  @message.title %></h2>
 <p>Posted by <%= @message.user.email %> <%= time_ago_in_words(@message.created_at)  %> ago</p>
 <div class="well"><p><%= markdown(@message.description) %></p></div>
 <% if user_signed_in? %>
