--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -2,6 +2,10 @@
 <h2><span class="glyphicon glyphicon-envelope"></span> <%=  @message.title %></h2>
 <p>Posted by <%= @message.user.email %> <%= time_ago_in_words(@message.created_at)  %> ago</p>
 <div class="well"><p><%= markdown(@message.description) %></p></div>
+
+<h3>Reply to Message:</h3>
+<%= render 'comments/form' %>
+
 <% if user_signed_in? %>
 <% if @message.user.id == current_user.id %>
     <%= link_to "Edit", edit_message_path(@message), class: "btn btn-default" %>
