--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -11,3 +11,8 @@
     <% end %>
 <%= link_to "Back", root_path, class: "btn btn-default" %>
 
+
+
+<h3>Reply to Message:</h3>
+<%= render 'comments/form' %>
+
