--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,5 @@
 <p><%= comment.content %></p>
+<p>Posted by <%= comment.user.email %> <%= time_ago_in_words(comment.created_At) %></p>
 
 <%= link_to "Edit", edit_message_comment_path(comment.message, comment) %>
-<%= link_to "Dekete", message_comment(comment.message, comment), method: :delete, data: { confirm: "Are you sure?" } %>
+<%= link_to "Delete", message_comment_path(comment.message, comment), method: :delete, data: { confirm: "Are you sure?" } %>
