--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,8 @@
 <%= simple_form_for([@message, @message.comments.build]) do |f| %>
-    <%= f.input :content, labell: "Comment" %>
+
+    <%= md_simple_editor  do %>
+        <%= f.input :content, as: :text, labell: "Comment"  %>
+    <% end %>
+
     <%= f.button :submit %>
 <% end %>
