--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,6 +1,6 @@
 
 <h2><span class="glyphicon glyphicon-envelope"></span> <%=  @message.title %></h2>
-<h3>Category: <%= markdown(@message.category.name) %><h3>
+<h4>Category: <%= @message.category.name %></h4>
 
 <p>Posted by <%= @message.user.email %> <%= time_ago_in_words(@message.created_at)  %> ago</p>
 <div class="well"><p><%= markdown(@message.description) %></p></div>
