--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
       <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
       <% else %>
           <li><%= link_to "Log in", new_user_session_path %></li>
-          <li><%= link_to "Categories", category_path %></li>
+          <li><%= link_to "Categories", 'categories#index' %></li>
       <% end %>
     </ul>
     <% if user_signed_in? %>
