--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
     </ul>
     <% if user_signed_in? %>
 
-        <p> <%= link_to "New category", 'categories#create', class: "navbar-right navbar-text navbar-link" %></p>
+        <p> <%= link_to "New category", new_category_path , class: "navbar-right navbar-text navbar-link" %></p>
         <p> <%= link_to "New message", new_message_path, class: "navbar-right navbar-text navbar-link" %></p>
     <% end %>
 
