--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -6,7 +6,7 @@
           <div class="col-sm-12">
             <h2><%= m.name %></h2>
           </div>
-          <%= link_to "View category", category_path(m), class: "btn btn-default btn-sm pull-right", style: "margin-bottom:5px;"%>
+          <%= link_to "View category", category_path(@category), method: :get, class: "btn btn-default btn-sm pull-right", style: "margin-bottom:5px;"%>
           <div class="clearfix"></div>
         </div>
       </div>
