--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,12 +28,11 @@
       <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
       <% else %>
           <li><%= link_to "Log in", new_user_session_path %></li>
+          <li><%= link_to "Categories", 'categories#index' %></li>
       <% end %>
-      <li><%= link_to "Categories", 'categories#index' %></li>
     </ul>
     <% if user_signed_in? %>
-
-        <p> <%= link_to "New category", categories_path, method: :get , class: "navbar-right navbar-text navbar-link" %></p>
+        <p> <%= link_to "New category", category_path(@category), method: :get , class: "navbar-right navbar-text navbar-link" %></p>
         <p> <%= link_to "New message", new_message_path, class: "navbar-right navbar-text navbar-link" %></p>
     <% end %>
 
