--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,11 +28,11 @@
       <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
       <% else %>
           <li><%= link_to "Log in", new_user_session_path %></li>
-          <li><%= link_to "Categories", 'categories#index' %></li>
+          <li><%= link_to "Categories", categories_path %></li>
       <% end %>
     </ul>
     <% if user_signed_in? %>
-        <p> <%= link_to "New category", category_path(@category), method: :get , class: "navbar-right navbar-text navbar-link" %></p>
+        <p> <%= link_to "New category", new_category_path , method: :get , class: "navbar-right navbar-text navbar-link" %></p>
         <p> <%= link_to "New message", new_message_path, class: "navbar-right navbar-text navbar-link" %></p>
     <% end %>
 
