--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -9,5 +9,12 @@
     <div>
     <%= f.collection_select :category_id, Category.all, :id, :name %>
     </div>
+
+    <p>
+      <%= f.label :cover %>
+      <%= f.file_field :cover %>
+    </p>
+
+
     <%= f.button :submit %>
 <% end %>
