--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,15 +20,6 @@
       <%= link_to "Message Application", root_path, class: "navbar-brand" %>
     </div>
 
-    <form class="navbar-form navbar-left">
-      <%= form_tag messages_path, :method => :get do %>
-          <div class="form-group">
-            <%= text_field_tag :search, params[:search] %>
-          </div>
-          <%= submit_tag "Search", :name => nil %>
-      <% end %>
-
-    </form>
 
     <ul class="nav navbar-nav">
 
@@ -43,6 +34,16 @@
       <% end %>
       <li><%= link_to "Categories", categories_path %></li>
     </ul>
+    <form class="navbar-form navbar-left">
+      <%= form_tag 'messages#search', :method => :get do %>
+          <div class="form-group">
+            <%= text_field_tag :search, params[:search] %>
+          </div>
+          <%= submit_tag "Search", :name => nil %>
+      <% end %>
+
+    </form>
+
     <% if user_signed_in? %>
         <p> <%= link_to "New category", new_category_path , method: :get , class: "navbar-right navbar-text navbar-link" %></p>
         <p> <%= link_to "New message", new_message_path, class: "navbar-right navbar-text navbar-link" %></p>
