--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
           <div class="form-group">
             <%= text_field_tag :search, params[:search] %>
           </div>
-          <%= submit_tag "Search", :name => nil %>
+          <%= submit_tag "Search" %>
       <% end %>
 
     </form>
