--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,11 +35,11 @@
       <li><%= link_to "Categories", categories_path %></li>
     </ul>
     <form class="navbar-form navbar-left">
-      <%= form_tag('messages#search', :method => :get)  do %>
+      <%= form_tag messages_path, :method => 'get' do %>
           <div class="form-group">
             <%= text_field_tag :search, params[:search] %>
           </div>
-          <%= submit_tag "Search" %>
+          <%= submit_tag "Search", :name => nil %>
       <% end %>
 
     </form>
