--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -12,7 +12,7 @@
 
     <p>
       <%= f.label :cover %>
-      <%= f.file_field :cover %>
+      <%= f.input :cover, placeholder:"Link to photo" %>
     </p>
 
 
