--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -3,8 +3,16 @@
 <h4>Category: <%= @message.category.name %></h4>
 
 <p>Posted by <%= @message.user.email %> <%= time_ago_in_words(@message.created_at)  %> ago</p>
-<div class="well"><p><%= markdown(@message.description) %></p></div>
-<p><%= image_tag @message.cover  if @message.cover? %></p>
+<div class="well">
+  <p><%= image_tag @message.cover  if @message.cover? %></p>
+
+
+  <p><%= markdown(@message.description) %></p>
+
+
+
+</div>
+
 <% if user_signed_in? %>
 <% if @message.user.id == current_user.id %>
     <%= link_to "Edit", edit_message_path(@message), class: "btn btn-default" %>
