--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,10 +1,11 @@
 <div class="container">
+  Messages
   <div class="row">
     <% @messages.each do |m| %>
-    <div class="col-sm-4">
+    <div class="col-sm-4" style="margin-top:10px;">
       <div class="news">
         <div class="img-figure">
-          <div class="cat">m.category</div>
+          <div class="cat"><%= m.category.name %></div>
           <img src="http://136.243.1.253/~creolitic/bootsnipp/fashion.jpg" class="img-responsive">
         </div>
 
