--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -13,7 +13,7 @@
           <h1><%= m.title %></h1>
         </div>
         <p class="description">
-          <%= truncate(message.description, length:5) %>
+          <%= truncate(m.description, length:5) %>
         </p>
 
         <p class="more">
