--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -20,12 +20,21 @@
     <% end %>
     <% end %>
 <%= link_to "Back", root_path, class: "btn btn-default" %>
-
+<section class="comments">
 <h2>Comments</h2>
 
 <%= render @message.comments %>
+
+
+
 
 <% if user_signed_in? %>
 <h3>Comment a message</h3>
 <%= render 'comments/form' %>
 <% end %>
+
+
+
+
+
+</section>
