--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -67,6 +67,15 @@
 // Place all the styles related to the Messages controller here.
 // They will automatically be included in application.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  background: #f2f2f2;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 95px 0;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 200;
+}
 
 
 .news {
@@ -207,10 +216,6 @@ p.more {
   top: 20px;
   z-index: 1;
   padding: 3px 15px;
-}
-
-p {
-  margin: 0 0 1em;
 }
 
 .comment {
