--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <article class="comment">
   <a class="comment-img" href="#non">
-    <img src="https://pbs.twimg.com/profile_images/444197466133385216/UA08zh-B.jpeg" alt="" width="50" height="50">
+    <%= gravatar_tag comment.user.email, :size => 20 %>
   </a>
   <div class="comment-body">
     <div class="text">
