--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,9 +37,9 @@
     <form class="navbar-form navbar-left">
       <%= form_tag messages_path, :method => 'get' do %>
           <div class="form-group">
-            <%= text_field_tag :search, params[:search] %>
+            <%= text_field_tag :search, params[:search],  class: "form-control" %>
           </div>
-          <%= submit_tag "Search", :name => nil %>
+          <%= submit_tag "Search", :name => nil,  class: "btn btn-default" %>
       <% end %>
 
     </form>
