--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,21 +33,23 @@
 
       <% end %>
       <li><%= link_to "Categories", categories_path %></li>
+
+      <% if user_signed_in? %>
+          <p> <%= link_to "New category", new_category_path , method: :get , class: "navbar-right navbar-text navbar-link" %></p>
+          <p> <%= link_to "New message", new_message_path, class: "navbar-right navbar-text navbar-link" %></p>
+      <% end %>
     </ul>
     <form class="navbar-form navbar-left">
       <%= form_tag messages_path, :method => 'get' do %>
           <div class="form-group">
-            <%= text_field_tag :search, params[:search],  class: "form-control" %>
+            <%= text_field_tag :search, params[:search],  class: "form-control input-sm" %>
           </div>
-          <%= submit_tag "Search", :name => nil,  class: "btn btn-default" %>
+          <%= submit_tag "Search", :name => nil,  class: "btn btn-default btn-sm" %>
       <% end %>
 
     </form>
 
-    <% if user_signed_in? %>
-        <p> <%= link_to "New category", new_category_path , method: :get , class: "navbar-right navbar-text navbar-link" %></p>
-        <p> <%= link_to "New message", new_message_path, class: "navbar-right navbar-text navbar-link" %></p>
-    <% end %>
+
 
   </div>
   </div>
