--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,46 +13,79 @@
 
   <body>
 
-  <div class="navbar navbar-default">
-  <div class="container">
-    <div class="navbar-header">
 
+
+  <nav class="navbar navbar-default" role="navigation">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
       <%= link_to "Message Application", root_path, class: "navbar-brand" %>
     </div>
 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <% if !user_signed_in? %>
+            <li><%= link_to "Sign up", new_user_registration_path %> </li>
+        <% end %>
+        <% if user_signed_in? %>
+            <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+            <li><%= link_to "Log in", new_user_session_path %></li>
 
-    <ul class="nav navbar-nav">
-
-      <% if !user_signed_in? %>
-      <li><%= link_to "Sign up", new_user_registration_path %> </li>
-  <% end %>
-      <% if user_signed_in? %>
-      <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
-      <% else %>
-          <li><%= link_to "Log in", new_user_session_path %></li>
-
-      <% end %>
-      <li><%= link_to "Categories", categories_path %></li>
-
-      <% if user_signed_in? %>
-          <p> <%= link_to "New category", new_category_path , method: :get , class: "navbar-right navbar-text navbar-link" %></p>
-          <p> <%= link_to "New message", new_message_path, class: "navbar-right navbar-text navbar-link" %></p>
-      <% end %>
-    </ul>
-    <form class="navbar-form navbar-left">
-      <%= form_tag messages_path, :method => 'get' do %>
-          <div class="form-group">
-            <%= text_field_tag :search, params[:search],  class: "form-control input-sm" %>
-          </div>
-          <%= submit_tag "Search", :name => nil,  class: "btn btn-default btn-sm" %>
-      <% end %>
-
-    </form>
+        <% end %>
+        <% if !user_signed_in? %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Action Panel <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "New category", new_category_path , method: :get , class: "navbar-right navbar-text navbar-link" %></li>
+            <li><%= link_to "New message", new_message_path, class: "navbar-right navbar-text navbar-link" %></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
 
 
 
-  </div>
-  </div>
+          </ul>
+        </li>
+        <% end %>
+      </ul>
+      <div class="col-sm-3 col-md-3">
+        <%= form_tag messages_path, class: "navbar-form", :method => 'get' do %>
+            <div class="form-group">
+              <%= text_field_tag :search, params[:search],  class: "form-control input-sm" %>
+            </div>
+            <%= submit_tag "Search", :name => nil,  class: "btn btn-default btn-sm" %>
+        <% end %>
+
+        </form>
+      </div>
+      <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "Categories", categories_path %></li>
+
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="container">
   <p class="notice"><%= notice %> </p>
   <p class="alert"><%= alert %> </p>
