--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,24 +32,23 @@
       <ul class="nav navbar-nav">
         <% if !user_signed_in? %>
             <li><%= link_to "Sign up", new_user_registration_path %> </li>
-        <% end %>
-        <% if user_signed_in? %>
-            <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
-        <% else %>
             <li><%= link_to "Log in", new_user_session_path %></li>
-
         <% end %>
-        <% if !user_signed_in? %>
+
+
+        <li><%= link_to "Categories", categories_path %></li>
+        <% if user_signed_in? %>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Action Panel <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">User Panel<b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><%= link_to "New category", new_category_path , method: :get , class: "navbar-right navbar-text navbar-link" %></li>
             <li><%= link_to "New message", new_message_path, class: "navbar-right navbar-text navbar-link" %></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+
+                <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+
+
+
+
 
 
 
@@ -68,7 +67,20 @@
         </form>
       </div>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Categories", categories_path %></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">User Panel<b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "New category", new_category_path , method: :get , class: "navbar-right navbar-text navbar-link" %></li>
+            <li><%= link_to "New message", new_message_path, class: "navbar-right navbar-text navbar-link" %></li>
+
+
+
+
+          </ul>
+        </li>
+
+
+
 
       </ul>
     </div><!-- /.navbar-collapse -->
