--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,12 +39,12 @@
         <li><%= link_to "Categories", categories_path %></li>
         <% if user_signed_in? %>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">User Panel<b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Action Panel<b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "New category", new_category_path , method: :get , class: "navbar-right navbar-text navbar-link" %></li>
-            <li><%= link_to "New message", new_message_path, class: "navbar-right navbar-text navbar-link" %></li>
+            <li><%= link_to "New category", new_category_path , method: :get %></li>
+            <li><%= link_to "New message", new_message_path %></li>
 
-                <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+
 
 
 
@@ -70,9 +70,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">User Panel<b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "New category", new_category_path , method: :get , class: "navbar-right navbar-text navbar-link" %></li>
-            <li><%= link_to "New message", new_message_path, class: "navbar-right navbar-text navbar-link" %></li>
 
+            <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
 
 
 
