--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,7 +72,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">User Panel<b class="caret"></b></a>
           <ul class="dropdown-menu">
 
-            <li><% user.email %></li>
+            <li><% @current_user.email %></li>
 
             <li class="divider"></li>
 
