--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,8 +72,9 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">User Panel<b class="caret"></b></a>
           <ul class="dropdown-menu">
 
-            <li><%= current_user.email %></li>
+            <li><i class="glyphicon glyphicon-user"></i><%= current_user.email %></li>
 
+            <li><%= link_to "Edit profile", edit_profile %></li>
             <li class="divider"></li>
 
             <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
