--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,7 +74,7 @@
 
             <li><i class="glyphicon glyphicon-user"></i><%= current_user.email %></li>
 
-            <li><%= link_to "Edit profile", edit_profile %></li>
+            <li><%= link_to "Edit profile", edit_user_registration %></li>
             <li class="divider"></li>
 
             <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
