--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,7 +7,7 @@
             <h2><%= m.name %></h2>
           </div>
           <%= form_tag messages_path, :method => 'get' do %>
-              <%= hidden_field_tag :category, :value => m.category.name %>
+              <%= hidden_field_tag 'category', m.category.name %>
           <%= submit_tag "View messages", class: "btn btn-default btn-sm pull-right", style: "margin-bottom:5px;"%>
           <% end %>
           <div class="clearfix"></div>
