--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,15 +1,13 @@
 <div class="row-flex row-flex-wrap">
-  <% @categories.each do |m| %>
+  <% @categories.each do |c| %>
 
       <div class="col-md-4" style="background: gainsboro;border:3px solid white">
         <div class="col-sm-12" style="word-wrap: break-word; ">
           <div class="col-sm-12">
-            <h2><%= m.name %></h2>
+            <h2><%= c.name %></h2>
           </div>
-          <%= form_tag messages_path, :method => 'get' do %>
-              <%= hidden_field_tag 'category', m.category.name %>
-          <%= submit_tag "View messages", class: "btn btn-default btn-sm pull-right", style: "margin-bottom:5px;"%>
-          <% end %>
+
+          <%= link_to "View messages", message_path(m), class: "btn btn-default btn-sm pull-right", style: "margin-bottom:5px;"%>
           <div class="clearfix"></div>
         </div>
       </div>
