--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,7 +7,7 @@
             <h2><%= c.name %></h2>
           </div>
 
-          <%= link_to "View messages", messages_path(c), class: "btn btn-default btn-sm pull-right", style: "margin-bottom:5px;"%>
+          <%= link_to "View messages", messages_path(param1: c), class: "btn btn-default btn-sm pull-right", style: "margin-bottom:5px;"%>
           <div class="clearfix"></div>
         </div>
       </div>
