--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -12,7 +12,7 @@
 
     <p>
       <%= f.label :cover %>
-      <%= f.input :cover, placeholder:"Link to photo" %>
+      <%= form.input :cover, as: :file %>
     </p>
 
 
