--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -7,7 +7,7 @@
         <div class="img-figure">
           <div class="cat"><%= m.category.name %></div>
 
-          <%= image_tag m.cover , class: "img-responsive"  if  m.cover? %>
+          <%= cl_image_tag("10.jpg")  %>
         </div>
 
         <div class="title">
