--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -7,7 +7,7 @@
         <div class="img-figure">
           <div class="cat"><%= m.category.name %></div>
 
-          <%= cl_image_tag(m.cover)  %>
+          <%= cl_image_tag(m.cover, :width => 100, :height => 150)  %>
         </div>
 
         <div class="title">
